--- a/usluge.html
+++ b/usluge.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="pocetna.html" class="nav-link">Početna</a>
+            <a href="index.html" class="nav-link">Početna</a>
           </li>
           <li class="nav-item">
             <a href="onama.html" class="nav-link">O nama</a>
